[Polyam] Fix wrong background color on search results in web UI
Port 1e1d97a78727570bb3343aa4008b93edae3dde1d to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -474,7 +474,7 @@ a.account__display-name {
 .follow-request-banner,
 .account-memorial-banner {
   padding: 20px;
-  background: lighten($ui-base-color, 4%);
+  background: var(--surface-background-color);
   display: flex;
   align-items: center;
   flex-direction: column;
