--- a/app/javascript/flavours/polyam/styles/components/explore.scss
+++ b/app/javascript/flavours/polyam/styles/components/explore.scss
@@ -35,7 +35,8 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  background: $ui-base-color;
+  border: 1px solid var(--background-border-color);
+  border-top: 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
